Fixed Section Spacing

--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ footer{
 }
 
 .space{
-    height: 4em;
+    height: 8em;
 }
 
 
